# micropython-bmp280-i2c

./: .gitignore  README.md  main.py  pyproject.toml
config/: board.py
core/: bmp280.py  bus.py
lib/bmp280/: __init__.py  bmp280_configuration.py  bmp280_i2c.py
